test/errors/error25.vult
fun foo() {
  val (y)[2];
}